examples/negative/04_match_missing_option_case.aeth
// Expected diagnostic: MATCH_NON_EXHAUSTIVE missing None.
function main() returns Unit
  effects log
do
  match Some(1) do
    case Some(value) do
      print(intToString(value))
    end
  end
end
